--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "13.3.1",
     "next-sitemap": "^4.0.7",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.13",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
